--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="img-hero">
-            <img src="img/main.png" alt="">
+            <img src="main.png" alt="">
             <div class="rotate-text">
                 <div class="text">
                     <p>I'm Blogger And I'm Frontend Developer And I'm Designer</p>
